syntax = "proto3";

package user;

option go_package="./user";

service UserCenterService {
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc Register(RegUserRequest)returns(RegUserResponse);
}

// 登录参数
message LoginRequest {
  string Username =1;
  string Password = 2;
}

message LoginResponse{
  int64 Id = 1;
  string Username  = 2;
  string Password = 3;
}

// 用户注册
message RegUserRequest{
  string Username  = 1;
  string Password = 2;
  string Mobile = 3;
}
message RegUserResponse{
  int64 Id = 1;
}

